--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -7,6 +7,7 @@
   background: transparent;
   transition: all var(--transition-speed) ease;
   padding: 1rem 0;
+  height: 70px;
 
   &.scrolled {
     background: rgba(255, 255, 255, 0.9);
@@ -22,6 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%;
   }
 
   .logo {
@@ -137,11 +139,22 @@
         padding: 2rem;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         animation: slideIn var(--transition-speed) ease forwards;
+        gap: 1.5rem;
       }
     }
 
     .menuBtn {
       display: block;
+      margin-left: 1rem;
+    }
+
+    .container {
+      justify-content: space-between;
+    }
+
+    .authButtons {
+      margin-left: auto;
+      margin-right: 1rem;
     }
   }
 
@@ -150,12 +163,20 @@
       .loginBtn {
         display: none;
       }
+
+      .getStartedBtn {
+        padding: 0.5rem 1rem;
+      }
     }
   }
 
   @media (max-width: 640px) {
     .logo span {
       display: none;
+    }
+
+    & + * {
+      margin-top: 70px;
     }
   }
 }
