--- a/components/Features/Features.module.scss
+++ b/components/Features/Features.module.scss
@@ -122,7 +122,22 @@
 
   @media (max-width: 1024px) {
     .grid {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr;
+      max-width: 600px;
+      margin: 0 auto 4rem;
+
+      .feature {
+        width: 100%;
+        max-width: 600px;
+        margin: 0 auto;
+      }
+
+      .feature:last-child:nth-child(2n + 1) {
+        grid-column: auto;
+        margin: 0 auto;
+        max-width: 600px;
+        width: 100%;
+      }
     }
   }
 
@@ -138,18 +153,28 @@
         font-size: 1rem;
       }
     }
+
+    .grid {
+      max-width: 500px;
+
+      .feature {
+        max-width: 100%;
+      }
+    }
   }
 
   @media (max-width: 640px) {
     .grid {
       grid-template-columns: 1fr;
-    }
+      max-width: 400px;
 
-    .feature {
-      text-align: center;
+      .feature {
+        text-align: center;
+        max-width: 100%;
 
-      .iconWrapper {
-        margin: 0 auto 1.5rem;
+        .iconWrapper {
+          margin: 0 auto 1.5rem;
+        }
       }
     }
   }
